# mars

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: main.yml
docs/: formatting-options.md
src/: argfile.rs  file_name.rs  logger.rs  main.rs  pretty.rs  tests.rs
templates/: template.html
